src/test/ui/parser/issues/issue-14303-trait.rs
trait Foo<'a, T, 'b> {}
//~^ ERROR lifetime parameters must be declared prior to type or const parameters

fn main() {}
